# shortened

./: .dockerignore  .env.example  DOCKERFILE  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: crud.py  main.py  utils.py
app/db/: database.py  models.py  schemas.py
backend/: .gitignore  pyproject.toml
backend/core/db/: database.py  models.py  repositories.py  schemas.py
frontend/: index.html  script.js
